Fix overflow issues on Sales + Customers pages

--- a/client/src/views/pages/customers/CustomersPage.module.scss
+++ b/client/src/views/pages/customers/CustomersPage.module.scss
@@ -13,5 +13,7 @@
 .content {
   flex-grow: 1;
   padding: 2.5rem 2.5rem 2.5rem 2.5rem;
+  height: calc(100vh - 5rem);
+  overflow-y: auto;
 }
 
